feat: testing other routes
